--- a/MKLApp/src/main/AndroidManifest.xml
+++ b/MKLApp/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
     <uses-sdk
         android:minSdkVersion="7"
         android:targetSdkVersion="18" />
-    <uses-permission
-        android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -16,10 +16,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.majorkiekkoleague.android.MainActivity"
-            android:label="@string/app_name"
-            >
-            <intent-filter>
+                android:name=".activities.MainActivity"
+                android:label="@string/app_name">
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
