--- a/MKLApp/src/main/AndroidManifest.xml
+++ b/MKLApp/src/main/AndroidManifest.xml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.majorkiekkoleague.android"
-    android:versionCode="1"
-    android:versionName="1.0" >
+          package="com.majorkiekkoleague.android"
+          android:versionCode="1"
+          android:versionName="1.0">
 
     <uses-sdk
-        android:minSdkVersion="7"
-        android:targetSdkVersion="18" />
+            android:minSdkVersion="7"
+            android:targetSdkVersion="18"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+            android:allowBackup="true"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
         <activity
-                android:name=".activities.MainActivity"
+                android:name="com.majorkiekkoleague.android.activities.MainActivity"
                 android:label="@string/app_name">
-        <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+                android:name=".activities.GameActivity"
+                android:label="@string/title_activity_game"
+                android:parentActivityName="com.majorkiekkoleague.android.activities.MainActivity">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.majorkiekkoleague.android.activities.MainActivity"/>
         </activity>
     </application>
 
